# name-standardization

./: Makefile  README.md  pyproject.toml
src/standard_names/: __init__.py  main.py  rules.py
tests/: test_main.py  test_rules.py
