[tool.poetry]
name = "standard-names"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]
# TODO: fill out this file!

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocstrings = "^0.15.0"
mkdocs-material = "^7.1.3"
mkdocs = "^1.1.2"
black = "^21.4b1"
isort = "^5.8.0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
